# pet_food_report_parser

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: archive_folders.csv  archive_rules.yaml  templates.yaml
deploy/: pdf-report-poll.service
docs/: poll_runbook.md  server_deploy.md
feishu-plugin/: app.json
feishu-plugin/pdf-report-action/: block.json  package-lock.json
scripts/: build_archive_config_draft.py  bulk_upload_pdfs.py  run_poll.sh  run_web.sh  validate_archive_router.py
src/pdf_report_ingestor/: archive.py  batch.py  cli.py  exporter.py  feishu.py  models.py  normalization.py  ocr.py  output_importer.py  parser.py  pdf_text.py  router.py  settings.py  storage.py  templates.py  web.py  wide_table.py  worker.py
src/pdf_report_ingestor/templates/: report.html
tests/: test_archive.py  test_exporter.py  test_feishu.py  test_feishu_fields.py  test_normalization.py  test_output_importer.py  test_settings.py  test_storage.py  test_templates.py  test_web.py  test_wide_table.py  test_worker_archive.py
